--- a/src/app/marketing1/qtnmfcl/qtnmfcl-list/qtnmfcl-list.component.html
+++ b/src/app/marketing1/qtnmfcl/qtnmfcl-list/qtnmfcl-list.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="page-search">
-  <app-qtnmfcl-search [search_url]="'/api/Marketing/Qtnmfcl/GetListAsync'" [input]="ms.getSearchRecord()"
+  <app-qtnmfcl-search [search_url]="'/api/Marketing/Qtnmfcl/GetListAsync'" [input]="ms.getSearchRecord()" [print]="this.Print"
     (searchResult)="search($event)"></app-qtnmfcl-search>
 </div>
 
