--- a/src/app/seaexport/seaexporth/seaexporth-list/seaexporth-list.component.html
+++ b/src/app/seaexport/seaexporth/seaexporth-list/seaexporth-list.component.html
@@ -1,12 +1,10 @@
 <div class="page-header">
   <h5>{{title}}</h5>
-  <!-- <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/seaexport/seaexporthEdit"
-    [queryParams]="{id :0,mode:'add',menuid:menuid,type:type,  appid:appid}">New</button> -->
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
 <div class="page-search">
-  <app-seaexporth-search [search_url]="'/api/seaexport/seaexporth/GetListAsync'" [input]="ms.getSearchRecord()"
+  <app-seaexporth-search [search_url]="'/api/seaexport/seaexporth/GetListAsync'" [input]="ms.getSearchRecord()" [print]="this.Print"
     (searchResult)="search($event)"></app-seaexporth-search>
 </div>
 
