--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -248,7 +248,7 @@
             </div>
             <div class="form-group row">
               <div class="col-sm-4">
-                <button class="btn btn-sm btn-success w-100 mb-2">Copy To All House</button>
+                <button class="btn btn-sm btn-success w-100 ">Copy To All House</button>
               </div>
               <div class="col-sm-8">
                 <app-input maxlength="60" formControlName="mbl_cargo_loc_add1" [case]="'UPPER'" id="mbl_cargo_loc_add1"
