--- a/src/app/seaimport/seaimportm/seaimportm-search/seaimportm-search.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-search/seaimportm-search.component.html
@@ -19,30 +19,13 @@
           <app-input type="text" formControlName="mbl_refno" case="UPPER"> </app-input>
         </div>
       </div>
-      <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">Agent</label>
-        <div class="col-sm-8">
-          <app-input type="text" formControlName="mbl_agent_name" case="UPPER"> </app-input>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">Place Of Receipt</label>
-        <div class="col-sm-8">
-          <app-input type="text" formControlName="mbl_pol_name" case="UPPER"> </app-input>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">Place Of Delivery</label>
-        <div class="col-sm-8">
-          <app-input type="text" formControlName="mbl_pod_name" case="UPPER"> </app-input>
-        </div>
-      </div>
     </div>
 
     <div class="col-sm-6">
       <div class="form-group row">
         <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1 " *ngIf="print" (click)="search('PRINT')">Print</button>
         </div>
       </div>
     </div>
