--- a/src/app/airexport/airexport/airexport-search/airexport-search.component.html
+++ b/src/app/airexport/airexport/airexport-search/airexport-search.component.html
@@ -29,7 +29,8 @@
       </div>
       <div class="form-group row">
         <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1" *ngIf="print" (click)="search('PRINT')">Print</button>
         </div>
       </div>
     </div>
