--- a/src/app/master/customer/customer-search/customer-search.component.html
+++ b/src/app/master/customer/customer-search/customer-search.component.html
@@ -63,7 +63,8 @@
 
       <div class="form-group row">
         <div class="col-sm-12">
-          <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
+          <button class="btn btn-sm btn-success me-1" (click)="search('SEARCH')">Search</button>
+          <button class="btn btn-sm btn-success me-1 " *ngIf="print" (click)="search('PRINT')">Print</button>
         </div>
       </div>
     </div>
